# devops-adventure-cafezinho

./: .gitignore  Makefile  README.md  docker-compose.yaml
app/: Dockerfile  pyproject.toml
app/db/: database.py  database.sql
app/src/: database.py  main.py
