[tool.poetry]
name = "devops-adventure-cafezinho"
version = "0.1.0"
description = ""
authors = ["LstCenturion <allan.yoshioka@gmail.com>"]
readme = "README.md"
packages = [
    { include = "src", from = "." }
]


[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.32.0"
fastapi = "^0.115.3"
requests = "^2.32.3"
python-multipart = "^0.0.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
